# mcp_cot_prompting

./: .gitignore  README.md  example2-3.py  main.py  pyproject.toml  talk2mcp-2.py
